--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <p>연구 일지</p><br>
             <ul class="m2">
                 <li> <p><a href="StudyRecordInfo/2020.05.09.html">2020년 5월 9일</a></p></li>
-                <li> <p><a href="StudyRecordInfo/2020.05.12.html">2020년 5월 12일</a></p></li><br>
+                <li> <p><a href="StudyRecordInfo/2020.05.12.html">2020년 5월 12일</a></p></li>
+                <li> <p><a href="StudyRecordInfo/2020.05.13.html">2020년 5월 13일</a></p></li><br>
                  <!--마지막 목록은 반드시 br태그 붙이기!!-->
             </ul>
         </li>
