--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <li> <p><a href="StudyRecordInfo/2020.05.15.html">2020년 5월 15일</a></p></li>
                 <li> <p><a href="StudyRecordInfo/2020.05.16.html">2020년 5월 16일</a></p></li>
                 <li> <p><a href="StudyRecordInfo/2020.05.19.html">2020년 5월 19일</a></p></li>
-                <li> <p><a href="StudyRecordInfo/2020.05.20.html">2020년 5월 20일</a></p></li><br>
+                <li> <p><a href="StudyRecordInfo/2020.05.20.html">2020년 5월 20일</a></p></li>
+                <li> <p><a href="StudyRecordInfo/2020.05.21.html">2020년 5월 21일</a></p></li><br>
                  <!--마지막 목록은 반드시 br태그 붙이기!!-->
             </ul>
         </li>
