--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <li> <p><a href="StudyRecordInfo/2020.05.21.html">2020년 5월 21일</a></p></li>
                 <li> <p><a href="StudyRecordInfo/2020.05.22.html">2020년 5월 22일</a></p></li>
                 <li> <p><a href="StudyRecordInfo/2020.05.23.html">2020년 5월 23일</a></p></li>
-                <li> <p><a href="StudyRecordInfo/2020.05.26.html">2020년 5월 26일</a></p></li><br>
+                <li> <p><a href="StudyRecordInfo/2020.05.26.html">2020년 5월 26일</a></p></li>
+                <li> <p><a href="StudyRecordInfo/2020.05.27.html">2020년 5월 27일</a></p></li><br>
                  <!--마지막 목록은 반드시 br태그 붙이기!!-->
             </ul>
         </li>
