--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                 <a href="StudyRecordInfo/2020.05.28.html">2020년 5월 28일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.29.html">2020년 5월 29일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
