--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                 <a href="StudyRecordInfo/2020.05.30.html">2020년 5월 30일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.31.html">2020년 5월 31일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
