--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
                 <a href="StudyRecordInfo/2020.05.31.html">2020년 5월 31일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.02.html">2020년 6월 2일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
