--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
                 <a href="StudyRecordInfo/2020.06.03.html">2020년 6월 3일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.04.html">2020년 6월 4일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
