--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                 <a href="StudyRecordInfo/2020.06.05.html">2020년 6월 5일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.06.html">2020년 6월 6일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
