--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
                 <a href="StudyRecordInfo/2020.06.11.html">2020년 6월 11일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.12.html">2020년 6월 12일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
