--- a/StudyRecordInfo/2020.06.13.html
+++ b/StudyRecordInfo/2020.06.13.html
@@ -55,15 +55,15 @@
           }
       });
     </script>
-    <h1>2020년 6월 12일 연구 일지</h1>
+    <h1>2020년 6월 13일 연구 일지</h1>
     <div id="record">
       <br>
       <p>1) 일단어</p>
       <p>2) 자바스크립트 크누타이머 제작</p>
-      <p>3) 리액트 유튜브 강의 9~14강</p>
-      <p>리액트 테이블 만들기, Material UI, Table 컴포넌트에 대하여 공부하였습니다.</p>
-      <p>크누타이머 시계표시기를 제작하였습니다. 현재 정각 알림을 제작중입니다.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/qTVmxoXZkKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>3) 노마드코더 리액트 네이티브 강의 1~5강</p>
+      <p>리액트 네이티브 환경설정 중입니다. 현재 안드로이드 스튜디오 설치중입니다.</p>
+      <p>정각 알람 기능을 제작하였습니다. 이제 시간 설정 알람 기능을 제작할 예정입니다.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/v1vE7G6YQCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <h2 id="comment">댓글은 여기에</h2>
         <div id="disqus_thread"></div>
