--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
                 <a href="StudyRecordInfo/2020.06.13.html">2020년 6월 13일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.16.html">2020년 6월 16일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
