--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
                 <a href="StudyRecordInfo/2020.06.18.html">2020년 6월 18일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.19.html">2020년 6월 19일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
