--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
                 <a href="StudyRecordInfo/2020.06.24.html">2020년 6월 24일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.01.html">2020년 7월 1일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
