--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
             </li>
             <li>
               <p>
+                <a href="StudyRecordInfo/2020.06.30.html">2020년 6월 30일</a>
+              </p>
+            </li>
+            <li>
+              <p>
                 <a href="StudyRecordInfo/2020.07.01.html">2020년 7월 1일</a>
               </p>
             </li>
