--- a/StudyRecordInfo/2020.06.30.html
+++ b/StudyRecordInfo/2020.06.30.html
@@ -55,17 +55,17 @@
           }
       });
     </script>
-    <h1>2020년 7월 1일 연구 일지</h1>
+    <h1>2020년 6월 30일 연구 일지</h1>
     <div id="record">
       <br>
       <p>1) 일단어</p>
-      <p>2) 두잇 리액트 ~4-3과 진행중</p>
-      <p>3) 리액트 네이티브 3-1 ~ 3-2과 진행중</p>
+      <p>2) 두잇 리액트 4과 스토리북 환경 구축</p>
+      <p>3) 리액트 네이티브 환경구축</p>
       <p>4) 일어 회화</p>
-      <p>리액트 스토리북에 따른 스타일 구축을 공부하는 중입니다.</p>
-      <p>리액트 네이티브 안드로이드 에뮬레이터 설정을 완료하였습니다.</p>
-      <p>Stylesheet, SafeAreaView, ScrollView, StatusBar태그에 대하여 공부하였습니다.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/sR4Vv-x5Llg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>리액트 스토리북 환경 구축을 완료하였습니다.</p>
+      <p>리액트 네이티브 개발환경 구축을 완료하였습니다.</p>
+      <p>노트북이 고장난 관계로 한동안 업데이트를 하지 못하였습니다.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gLJvbrwv67c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <h2 id="comment">댓글은 여기에</h2>
         <div id="disqus_thread"></div>
