--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
                 <a href="StudyRecordInfo/2020.07.02.html">2020년 7월 2일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.05.html">2020년 7월 5일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.06.html">2020년 7월 6일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
