--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
                 <a href="StudyRecordInfo/2020.07.06.html">2020년 7월 6일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.07.html">2020년 7월 7일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
