--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
                 <a href="StudyRecordInfo/2020.07.08.html">2020년 7월 8일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.09.html">2020년 7월 9일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
