--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                 <a href="StudyRecordInfo/2020.07.09.html">2020년 7월 9일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.12.html">2020년 7월 12일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
