--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0">
     <title>민정이네 찐뇽이의 우주비행선 2호기</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="CSS_Homepage.css" />
@@ -240,6 +241,11 @@
             <li>
               <p>
                 <a href="StudyRecordInfo/2020.07.13.html">2020년 7월 13일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.14.html">2020년 7월 14일</a>
               </p>
             </li>
             <br />
