--- a/index.html
+++ b/index.html
@@ -1,19 +1,301 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0">
-    <link rel="stylesheet" href="indexDeco.css">
-    <title>주문 프로그램</title>
+    <title>민정이네 찐뇽이의 우주비행선 2호기</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="CSS_Homepage.css" />
+    <link rel="stylesheet" href="sideBar.css" />
+    <link rel="stylesheet" href="sideBarMenu.css" />
   </head>
-  <body>
-    <script src="engine.js"></script>
-    <div id="info">
-      <h1 class="title">주문</h1>
-      <br><br><br><br><br><br><br>
-      <p class="explanation">친절히 안내해드리겠습니다.</p>
-      <p class="explanation">여기를 눌러주세요</p>
-      <input type="button" value="버튼" id="pushButton" onClick="location.href='firstStep.html'">
+  <body onload="showImage()">
+    <script src="spaceshipEngine.js"></script>
+    <input type="checkbox" id="menuicon" />
+    <label for="menuicon">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+    <div class="sidebar">
+      <br /><br /><br /><br /><br /><br />
+      <ul id="ac">
+        <li class="m1">
+          <p>현재 날씨(온도℃, 지역), 시각</p>
+          <div>
+            <span class="js-weather"></span>, <span id="time">00:00</span>
+          </div>
+          <br />
+          <script src="clock.js"></script>
+          <script src="ujuweather.js"></script>
+        </li>
+        <li class="m1">
+          <p>연구 일지</p>
+          <br />
+          <ul class="m2">
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.09.html">2020년 5월 9일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.12.html">2020년 5월 12일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.13.html">2020년 5월 13일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.14.html">2020년 5월 14일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.15.html">2020년 5월 15일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.16.html">2020년 5월 16일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.19.html">2020년 5월 19일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.20.html">2020년 5월 20일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.21.html">2020년 5월 21일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.22.html">2020년 5월 22일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.23.html">2020년 5월 23일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.26.html">2020년 5월 26일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.27.html">2020년 5월 27일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.28.html">2020년 5월 28일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.29.html">2020년 5월 29일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.30.html">2020년 5월 30일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.05.31.html">2020년 5월 31일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.02.html">2020년 6월 2일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.03.html">2020년 6월 3일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.04.html">2020년 6월 4일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.05.html">2020년 6월 5일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.06.html">2020년 6월 6일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.10.html">2020년 6월 10일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.11.html">2020년 6월 11일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.12.html">2020년 6월 12일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.13.html">2020년 6월 13일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.16.html">2020년 6월 16일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.17.html">2020년 6월 17일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.18.html">2020년 6월 18일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.19.html">2020년 6월 19일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.20.html">2020년 6월 20일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.24.html">2020년 6월 24일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.06.30.html">2020년 6월 30일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.01.html">2020년 7월 1일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.02.html">2020년 7월 2일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.05.html">2020년 7월 5일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.06.html">2020년 7월 6일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.07.html">2020년 7월 7일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.08.html">2020년 7월 8일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.09.html">2020년 7월 9일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.12.html">2020년 7월 12일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.13.html">2020년 7월 13일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.14.html">2020년 7월 14일</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.16.html">2020년 7월 16일</a>
+              </p>
+            </li>
+            <br />
+            <!--마지막 목록은 반드시 br태그 붙이기!!-->
+          </ul>
+        </li>
+        <li class="m1">
+          <p>데이뜌 일지(개발 예정)</p>
+          <br />
+          <ul class="m2">
+            <li><p>현재 개발중입니다.</p></li>
+            <br />
+            <!--마지막 목록은 반드시 br태그 붙이기!!-->
+          </ul>
+        </li>
+        <li class="m1">
+          <p>업데이트 정보</p>
+          <br />
+          <ul class="m2">
+            <li>
+              <p><a href="UpdateInfo/2020.05.09Upd.html">2020년 5월 9일</a></p>
+            </li>
+            <br /><!--마지막 목록은 반드시 br태그 붙이기!!-->
+          </ul>
+        </li>
+        <li class="m1">
+          <p><a href="AboutUs.html">About Us</a></p>
+          <br />
+        </li>
+      </ul>
     </div>
+    <script>
+      $(".m1").click(function () {
+        $(".m2").slideUp();
+        if ($(this).children(".m2").is(":visible")) {
+          $(this).children(".m2").slideUp();
+        } else {
+          $(this).children(".m2").slideDown();
+        }
+      });
+    </script>
+    <span id="homeImageFrame">
+      <p><img id="homeImage" /></p>
+      <!--간판 사진 넣는 칸-->
+      <p id="homepageTitle">민정이네 찐뇽이의 우주비행선 2호기</p>
+    </span>
   </body>
 </html>
