--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
                 <a href="StudyRecordInfo/2020.07.20.html">2020년 7월 20일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.21.html">2020년 7월 21일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
