--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
                 <a href="StudyRecordInfo/2020.07.23.html">2020년 7월 23일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.07.26.html">2020년 7월 26일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
