--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
                 <a href="StudyRecordInfo/2020.07.29.html">2020년 7월 29일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.08.03.html">2020년 8월 3일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
