--- a/index.html
+++ b/index.html
@@ -300,6 +300,11 @@
             </li>
             <li>
               <p>
+                <a href="StudyRecordInfo/2020.08.02.html">2020년 8월 2일</a>
+              </p>
+            </li>
+            <li>
+              <p>
                 <a href="StudyRecordInfo/2020.08.03.html">2020년 8월 3일</a>
               </p>
             </li>
