--- a/StudyRecordInfo/2020.08.02.html
+++ b/StudyRecordInfo/2020.08.02.html
@@ -55,15 +55,13 @@
           }
       });
     </script>
-    <h1>2020년 8월 3일 연구 일지</h1>
+    <h1>2020년 8월 2일 연구 일지</h1>
     <div id="record">
       <br>
-      <p>1) 리액트 네이티브 날씨앱 제작 중입니다. 현재 날씨 예보 JSON 파싱에 성공하였습니다.</p>
-      <p>2) 공모전 프로젝트 메뉴 선정 엔진 파트를 개발중입니다.</p>
+      <p>1) 리액트 네이티브 날씨앱 제작 중입니다. 현재 API 코드 짜는중입니다.</p>
+      <p>2) 공모전 프로젝트 틀 제작을 완료하였습니다.</p>
       <p>3) 일단어</p>
       <p>4) 일어 회화</p>
-      <p>5) 현재 기상 API 관련 연구로 인하여 약 2주동안 날씨 및 위치가 작동되지 않을 예정이오니 양해부탁드립니다.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/lr0lH_9W930" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <h2 id="comment">댓글은 여기에</h2>
         <div id="disqus_thread"></div>
