--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
                 <a href="StudyRecordInfo/2020.08.05.html">2020년 8월 5일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.08.06.html">2020년 8월 6일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
