--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@
                 <a href="StudyRecordInfo/2020.08.09.html">2020년 8월 9일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.08.19.html">2020년 8월 19일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
