--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
                 <a href="StudyRecordInfo/2020.08.20.html">2020년 8월 20일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.08.28.html">2020년 8월 28일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
