--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
                 <a href="StudyRecordInfo/2020.08.31.html">2020년 8월 31일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.09.01.html">2020년 9월 1일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
