--- a/index.html
+++ b/index.html
@@ -363,6 +363,11 @@
                 <a href="StudyRecordInfo/2020.09.01.html">2020년 9월 1일</a>
               </p>
             </li>
+            <li>
+              <p>
+                <a href="StudyRecordInfo/2020.09.02.html">2020년 9월 2일</a>
+              </p>
+            </li>
             <br />
             <!--마지막 목록은 반드시 br태그 붙이기!!-->
           </ul>
